deployment/kube/frntnd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: compute-kart-frntnd-ingress
  namespace: computekart
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - computekart.com
      secretName: computekart-tls
  rules:
    - host: computekart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: compute-kart-frntnd
                port:
                  number: 80
